modules/gdscript/tests/scripts/runtime/errors/cast_freed_object.gd
func test():
	var node := Node.new()
	node.free()
	print(node as Node2D)
